...
                        android:gravity="top"
                        android:text="Topics:"
                        android:fontFamily="@font/google_sans_regular"
                        android:textAppearance="@style/pseudocode_" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/binaryButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/round_bt_light_blue"
...
